# deepsdf

./: .gitignore  README.md  load_shapenet.py  pyproject.toml  reconstruct.py  requirements.txt  train_deep_sdf.py
config/: cup.yaml  standard.yaml
config/03797390/: split.json
network/: deep_sdf_network.py
utils/: mesh.py  sampling.py
